added possibility of adding and editing product, added: registration for user

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ APP_SECRET=77927b6789038efde95cb39f193632ee
 ###< symfony/framework-bundle ###
 
 ###> symfony/mailer ###
-# MAILER_DSN=null://null
+MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465?secure=starttls
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -28,5 +28,5 @@ APP_SECRET=77927b6789038efde95cb39f193632ee
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="postgresql://online-store_admin:rc123@127.0.0.1:5432/online-store?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
