Created admin panel

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -14,6 +14,20 @@ security:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
+        admin_secured_area:
+            pattern: ^/admin
+            anonymous: true
+            lazy: true
+            provider: app_user_provider
+            guard:
+                authenticators:
+                    - App\Security\Admin\LoginFormAuthenticator
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 week
+                path: /admin/ # path is global
+            logout:
+                path: admin_security_logout
         main:
             anonymous: true
             lazy: true
@@ -23,7 +37,7 @@ security:
                     - App\Security\LoginFormAuthenticator
             remember_me:
                 secret: '%kernel.secret%'
-                lifetime: 6048000 # 1 week
+                lifetime: 604800 # 1 week
                 path: / # path is global
             logout:
                 path: main_logout
@@ -39,5 +53,6 @@ security:
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
-        # - { path: ^/admin, roles: ROLE_ADMIN }
+        - { path: ^/admin/login }
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/profile, roles: ROLE_USER }
