--- a/.env
+++ b/.env
@@ -30,3 +30,7 @@ MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
 DATABASE_URL="postgresql://online-store_admin:rc123@127.0.0.1:5432/online-store?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
