--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 /config/secrets/prod/prod.decrypt.private.php
 /public/uploads/
 /public/bundles/
+/public/old_build.zip
 /var/
 /vendor/
 ###< symfony/framework-bundle ###
@@ -19,3 +20,10 @@
 /phpunit.xml
 .phpunit.result.cache
 ###< phpunit/phpunit ###
+
+###> symfony/webpack-encore-bundle ###
+/node_modules/
+/public/build/
+npm-debug.log
+yarn-error.log
+###< symfony/webpack-encore-bundle ###
