1.Created Event and EventSubscriber for sending mail to subscribers these classes 2. Added class EmailSender (Logic sending) 3. Added inky styles (for adaptability) 4. Created email templates

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -1,2 +1,5 @@
 twig:
+    paths:
+        'assets/images': images # pointer into folder, simple: @images
+        'public': public
     default_path: '%kernel.project_dir%/templates'
