Added registration and authorization through Google account

--- a/.env
+++ b/.env
@@ -34,3 +34,8 @@ DATABASE_URL="postgresql://online-store_admin:rc123@127.0.0.1:5432/online-store?
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> league/oauth2-google ###
+OAUTH_GOOGLE_CLIENT_ID=367522455569-0rlpnlvf7f3h4thnei0f74mrovl5rndm.apps.googleusercontent.com
+OAUTH_GOOGLE_CLIENT_SECRET=xSBU8mplT9MxVlBRaBs4z1N6
+###< league/oauth2-google ###
