--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
         "doctrine/orm": "^2.12",
         "imagine/imagine": "1.2",
         "knplabs/knp-paginator-bundle": "^5.8",
+        "knpuniversity/oauth2-client-bundle": "2.7",
+        "league/oauth2-google": "^4.0",
         "nelmio/cors-bundle": "^2.2",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.1",
