--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "knpuniversity/oauth2-client-bundle": "2.7",
         "league/oauth2-google": "^4.0",
         "nelmio/cors-bundle": "^2.2",
+        "php-translation/symfony-bundle": "^0.12.6",
         "phpdocumentor/reflection-docblock": "^5.3",
         "sensio/framework-extra-bundle": "^5.1",
         "stof/doctrine-extensions-bundle": "^1.7",
