1. Configured the package Symfony Messenger 2. Password recovery was made async 3. Email confirmation was made async

--- a/.env
+++ b/.env
@@ -18,6 +18,9 @@ APP_ENV=dev
 APP_SECRET=77927b6789038efde95cb39f193632ee
 ###< symfony/framework-bundle ###
 
+SITE_BASE_SCHEME=https
+SITE_BASE_HOST=localhost:8000
+
 ###> symfony/mailer ###
 MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465?secure=starttls
 ###< symfony/mailer ###
@@ -39,3 +42,10 @@ CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 OAUTH_GOOGLE_CLIENT_ID=367522455569-0rlpnlvf7f3h4thnei0f74mrovl5rndm.apps.googleusercontent.com
 OAUTH_GOOGLE_CLIENT_SECRET=xSBU8mplT9MxVlBRaBs4z1N6
 ###< league/oauth2-google ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+MESSENGER_TRANSPORT_DSN=doctrine://default
+# MESSENGER_TRANSPORT_DSN=amqp://guest:guest@localhost:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
