Added tests : unit, integration, functional and they also runned

--- a/.env
+++ b/.env
@@ -22,7 +22,8 @@ SITE_BASE_SCHEME=https
 SITE_BASE_HOST=localhost:8000
 
 ###> symfony/mailer ###
-MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465?secure=starttls
+MAILER_DSN=null://null
+# MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465?secure=starttls
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
@@ -31,7 +32,7 @@ MAILER_DSN=smtp://g8hwa3qu@mailosaur.net:ciVX27dNLMgBFrr2@smtp.mailosaur.net:465
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://online-store_admin:rc123@127.0.0.1:5432/online-store?serverVersion=14&charset=utf8"
+DATABASE_URL="postgresql://online-store_admin:rc123@127.0.0.1:5432/online_store?serverVersion=14&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
