--- a/composer.json
+++ b/composer.json
@@ -60,11 +60,15 @@
         "twig/twig": "^2.12|^3.0"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^6.7.0",
+        "dbrekelmans/bdi": "^1.0",
+        "hautelook/alice-bundle": "^2.0",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
         "symfony/debug-bundle": "5.3.*",
         "symfony/maker-bundle": "^1.0",
+        "symfony/panther": "^1.1",
         "symfony/phpunit-bridge": "^6.1",
         "symfony/stopwatch": "5.3.*",
         "symfony/web-profiler-bundle": "5.3.*"
