--- a/composer.json
+++ b/composer.json
@@ -62,7 +62,9 @@
     "require-dev": {
         "dama/doctrine-test-bundle": "^6.7.0",
         "dbrekelmans/bdi": "^1.0",
+        "friendsofphp/php-cs-fixer": "^3.2.1",
         "hautelook/alice-bundle": "^2.0",
+        "phpstan/phpstan": "^1.8",
         "phpunit/phpunit": "^9.5",
         "symfony/browser-kit": "5.3.*",
         "symfony/css-selector": "5.3.*",
