--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
         "@symfony/stimulus-bridge": "^3.0.0",
         "@symfony/webpack-encore": "^1.7.0",
         "core-js": "^3.0.0",
+        "eslint": "^8.20.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "eslint-plugin-vue": "^9.2.0",
         "file-loader": "^6.0.0",
         "regenerator-runtime": "^0.13.2",
         "sass": "^1.53.0",
