--- a/.env.test
+++ b/.env.test
@@ -15,6 +15,10 @@ MAILER_DSN=null://null
 
 DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
 ###> symfony/messenger ###
 # Choose one of the transports below
 MESSENGER_TRANSPORT_DSN=doctrine://default
