--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.1.1",
+        "@vue/compiler-sfc": "^3.2.41",
         "axios": "^0.21.1",
         "bootstrap": "^4.3.1",
         "chart.js": "^2.9.4",
@@ -31,10 +32,10 @@
         "http-status-codes": "^2.1.4",
         "jquery": "^3.5.1",
         "jquery.easing": "^1.4.1",
+        "pinia": "^2.0.23",
         "popper.js": "^1.16.1",
-        "vue": "^2.6.12",
-        "vue-loader": "^15.10.0",
-        "vue-template-compiler": "^2.6.12",
-        "vuex": "^3.6.2"
+        "remove": "^0.1.5",
+        "vue": "^3.2.41",
+        "vue-loader": "^16.7.0"
     }
 }
